--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class="ratakan">
                         <h3 class="text-end fw-bold">Tentang Kami</h3>
                         <p class="text-end">Jasa kami mencakup bantuan nasihat bisnis, bimbingan dan operasional berbagai fungsi manajemen bisnis, konsultasi manajemen olah agronomist dan agricultural economis pada bidang pertanian...<br><br><br>
-                        <a href="#" class="btn btn-light">Tampilkan lebih banyak</a></p>
+                        <a href="#" class="btn btn-primary">Tampilkan lebih banyak</a></p>
                     </div>
                 </div>
             </div>
